ocaml/testsuite/tests/typing-layouts/parsing_stable.compilers.reference
type 'a t0 = 'a list
type ('a : immediate) t0 = 'a list
Line 2, characters 11-15:
2 | type ('a : void) t0 = 'a list;;
               ^^^^
Error: Layout void is more experimental than allowed by the enabled layouts extension.
       You must enable -extension-universe alpha to use this feature.
Line 2, characters 11-15:
2 | type ('a : valu) t0 = 'a list;;
               ^^^^
Error: Unknown layout valu
Line 2, characters 11-25:
2 | type ('a : non_null_value) t0 = 'a list;;
               ^^^^^^^^^^^^^^
Error: Layout non_null_value is more experimental than allowed by the enabled layouts extension.
       You must enable -extension-universe alpha to use this feature.
type t = float#
Line 2, characters 9-13:
2 | type t = int#;;
             ^^^^
Error: Unbound type constructor int#
Hint: Did you mean int?
Line 2, characters 9-17:
2 | type t = Float.t#;;
             ^^^^^^^^
Error: Unbound type constructor Float.t#
